# OC_Python_P11

./: .coverage  .coveragerc  .flaskenv  .gitignore  Makefile  README.md  competitions.json  config.py  dev-requirements.txt  locustfile.py  pyproject.toml  server.py  utils.py
data/: clubs.json  competitions.json  scripts.py  store.py
db/: access.py  clubs.json  competitions.json  exceptions.py
mocks/: clubs.py  competitions.py
models/: __init__.py
reports/: locust_report.html
reports/coverage/: config_py.html  d_c810615cce0f7acb___init___py.html  d_ccd67909ff75f620___init___py.html  d_ccd67909ff75f620_booking_views_py.html  d_ccd67909ff75f620_clubs_views_py.html  d_ccd67909ff75f620_home_views_py.html  d_ccd67909ff75f620_logout_views_py.html  d_ccd67909ff75f620_purchase_slots_py.html  d_de3833460954761d_booking_services_py.html  d_efda893aa850b0c0_store_py.html  index.html  server_py.html  status.json
requirements/: dev-requirements.txt  requirements.txt
services/: booking_services.py
templates/: base.html  booking.html  clubs.html  home.html  index.html  welcome.html
tests/: test_booking_view.py  test_get_max_bookable_slots.py  test_get_name_from_form.py  test_is_bookable_competition.py  test_server_routes.py  test_store_load.py  test_update_club_points.py  test_validate_slots.py
tests/integration/: test_club_views.py
tests/unit/: test_find_club.py  test_get_club_by_email.py  test_get_club_by_name.py  test_get_competition_by_name.py  (+7 more)
utils/: __init__.py
views/: booking_views.py  clubs_views.py  home_views.py  logout_views.py  purchase_slots.py
(+7 files in other folders)
